# Context-Aware-CI-Build-Failure-Prediction

./: .gitignore  README.md  pyproject.toml
docs/: aws_gpu_run.md
src/context_aware_ci_build_failure_prediction/models/: load_samples.py  run.py
src/context_aware_ci_build_failure_prediction/models/attention_fusion/: inference.py  model.py  train.py
src/context_aware_ci_build_failure_prediction/models/baseline/: baseline.py  fit.py  inference.py  sample_sweep.py
src/context_aware_ci_build_failure_prediction/preprocessing/: cli.py  main.py  process.py  test.py  types.py
src/context_aware_ci_build_failure_prediction/preprocessing/helpers/: context_extraction.py  embedding.py  git_extraction.py
src/context_aware_ci_build_failure_prediction/preprocessing/modules/: failure_logger.py  manifest.py  repo_manager.py  resume.py  shard_writer.py
tests/: test_preprocessing_cli.py  test_preprocessing_phase1.py  test_preprocessing_phase2.py  test_preprocessing_phase3.py  test_preprocessing_phase4.py  test_preprocessing_phase5.py  test_preprocessing_phase6.py  test_preprocessing_resume.py
