[project]
name = "context-aware-ci-build-failure-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "John David Genus"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "torch (>=2.12.1,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "transformers (>=5.12.1,<6.0.0)",
    "tqdm (>=4.68.3,<5.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)"
]

[project.scripts]
preprocess-travistorrent = "context_aware_ci_build_failure_prediction.preprocessing.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.pytest.ini_options]
norecursedirs = [
    "embedding_shards",
    "embedding_shards_test",
    "temp_repos",
    "temp_repos_test",
]
